refactor navigation controls; replace input-select components with tag elements for consistency

--- a/examples/index.html
+++ b/examples/index.html
@@ -77,28 +77,6 @@
       .org-nav-links { display: none; }
     }
 
-    /* ---- Select controls ---- */
-    /* Nav controls use compact input-select components */
-    .org-nav-controls .input-field {
-      margin: 0;
-    }
-
-    .org-nav-controls .input-control {
-      height: 36px;
-      min-width: 120px;
-      padding-left: var(--spacing-100);
-      padding-right: var(--spacing-100);
-    }
-
-    .org-nav-controls .input-select-display {
-      font-size: 12px;
-    }
-
-    .org-nav-controls .input-select-chevron {
-      width: 20px;
-      height: 20px;
-      font-size: 18px;
-    }
 
     /* ---- Examples grid ---- */
     .examples-grid {
@@ -194,7 +172,7 @@
     <nav class="org-nav-links">
       <a href="/index.html" class="chip surface-ghost scale-300">Getting Started</a>
       <a href="/walkthrough.html" class="chip surface-ghost scale-300">Tokens & Styles</a>
-      <a href="/examples/index.html" class="chip surface-ghost scale-300 chip-team-color">Examples</a>
+      <a href="/examples/index.html" class="tag tag-team-color">Examples</a>
     </nav>
 
     <div class="org-nav-controls">
