--- a/index.html
+++ b/index.html
@@ -68,28 +68,6 @@
       align-items: center;
     }
 
-    /* Nav controls use compact input-select components */
-    .org-nav-controls .input-field {
-      margin: 0;
-    }
-
-    .org-nav-controls .input-control {
-      height: 36px;
-      min-width: 120px;
-      padding-left: var(--spacing-100);
-      padding-right: var(--spacing-100);
-    }
-
-    .org-nav-controls .input-select-display {
-      font-size: 12px;
-    }
-
-    .org-nav-controls .input-select-chevron {
-      width: 20px;
-      height: 20px;
-      font-size: 18px;
-    }
-
     @media (max-width: 600px) {
       .org-nav-links { display: none; }
     }
@@ -236,7 +214,7 @@
     <span class="display200 text-primary">Diet AirDS</span>
   </a>
   <nav class="org-nav-links">
-    <a href="/index.html" class="chip surface-ghost scale-300 chip-team-color">Getting Started</a>
+    <a href="/index.html" class="tag tag-team-color">Getting Started</a>
     <a href="/walkthrough.html" class="chip surface-ghost scale-300">Tokens & Styles</a>
     <a href="/examples/index.html" class="chip surface-ghost scale-300">Examples</a>
   </nav>
