--- a/walkthrough.html
+++ b/walkthrough.html
@@ -73,28 +73,6 @@
       align-items: center;
     }
 
-    /* Compact input-select styling for nav controls */
-    .org-nav-controls .input-field {
-      margin: 0;
-    }
-
-    .org-nav-controls .input-control {
-      height: 36px;
-      min-width: 120px;
-      padding-left: var(--spacing-100);
-      padding-right: var(--spacing-100);
-    }
-
-    .org-nav-controls .input-select-display {
-      font-size: 12px;
-    }
-
-    .org-nav-controls .input-select-chevron {
-      width: 20px;
-      height: 20px;
-      font-size: 18px;
-    }
-
     @media (max-width: 600px) {
       .org-nav-links { display: none; }
     }
@@ -541,7 +519,7 @@
   </a>
   <nav class="org-nav-links">
     <a href="/index.html" class="chip surface-ghost scale-300">Getting Started</a>
-    <a href="/walkthrough.html" class="chip surface-ghost scale-300 chip-team-color">Tokens & Styles</a>
+    <a href="/walkthrough.html" class="tag tag-team-color">Tokens & Styles</a>
     <a href="/examples/index.html" class="chip surface-ghost scale-300">Examples</a>
   </nav>
   <div class="org-nav-controls">
