refactor navigation links; replace tag elements with chip components for consistency and improve layout spacing

--- a/examples/index.html
+++ b/examples/index.html
@@ -71,6 +71,8 @@
       display: flex;
       gap: var(--spacing-100);
       align-items: center;
+      padding-top: var(--spacing-100);
+      padding-bottom: var(--spacing-100);
     }
 
     @media (max-width: 600px) {
@@ -172,7 +174,7 @@
     <nav class="org-nav-links">
       <a href="/index.html" class="chip surface-ghost scale-300">Getting Started</a>
       <a href="/walkthrough.html" class="chip surface-ghost scale-300">Tokens & Styles</a>
-      <a href="/examples/index.html" class="tag tag-team-color">Examples</a>
+      <a href="/examples/index.html" class="chip surface-borderNeutral scale-300 chip-team-color">Examples</a>
     </nav>
 
     <div class="org-nav-controls">
