--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
       display: flex;
       gap: var(--spacing-100);
       align-items: center;
+      padding-top: var(--spacing-100);
+      padding-bottom: var(--spacing-100);
     }
 
     @media (max-width: 600px) {
@@ -214,7 +216,7 @@
     <span class="display200 text-primary">Diet AirDS</span>
   </a>
   <nav class="org-nav-links">
-    <a href="/index.html" class="tag tag-team-color">Getting Started</a>
+    <a href="/index.html" class="chip surface-borderNeutral scale-300 chip-team-color">Getting Started</a>
     <a href="/walkthrough.html" class="chip surface-ghost scale-300">Tokens & Styles</a>
     <a href="/examples/index.html" class="chip surface-ghost scale-300">Examples</a>
   </nav>
