--- a/walkthrough.html
+++ b/walkthrough.html
@@ -71,6 +71,8 @@
       display: flex;
       gap: var(--spacing-100);
       align-items: center;
+      padding-top: var(--spacing-100);
+      padding-bottom: var(--spacing-100);
     }
 
     @media (max-width: 600px) {
@@ -519,7 +521,7 @@
   </a>
   <nav class="org-nav-links">
     <a href="/index.html" class="chip surface-ghost scale-300">Getting Started</a>
-    <a href="/walkthrough.html" class="tag tag-team-color">Tokens & Styles</a>
+    <a href="/walkthrough.html" class="chip surface-borderNeutral scale-300 chip-team-color">Tokens & Styles</a>
     <a href="/examples/index.html" class="chip surface-ghost scale-300">Examples</a>
   </nav>
   <div class="org-nav-controls">
