--- a/examples/index.html
+++ b/examples/index.html
@@ -87,17 +87,10 @@
 
     /* ---- Example card ---- */
     .example-card {
-      background: var(--bg-surface);
-      border-radius: var(--border-radius-200);
       overflow: hidden;
       text-decoration: none;
       display: flex;
       flex-direction: column;
-      transition: opacity 0.15s ease;
-    }
-
-    .example-card:hover {
-      opacity: 0.85;
     }
 
     /* ---- Scaled iframe thumbnail ---- */
@@ -230,7 +223,7 @@
       <div class="examples-grid">
 
         <!-- ---- Checkout ---- -->
-        <a class="example-card" href="https://diet-air-ds.vercel.app/examples/checkout.html" target="_blank">
+        <a class="example-card surface-card scale-700" href="https://diet-air-ds.vercel.app/examples/checkout.html" target="_blank">
           <div class="card-thumbnail">
             <iframe src="https://diet-air-ds.vercel.app/examples/checkout.html"
                     loading="lazy"
@@ -258,7 +251,7 @@
         </a>
 
         <!-- ---- Chat Agent ---- -->
-        <a class="example-card" href="https://diet-air-ds.vercel.app/examples/chat-agent.html" target="_blank">
+        <a class="example-card surface-card scale-700" href="https://diet-air-ds.vercel.app/examples/chat-agent.html" target="_blank">
           <div class="card-thumbnail">
             <iframe src="https://diet-air-ds.vercel.app/examples/chat-agent.html"
                     loading="lazy"
@@ -286,7 +279,7 @@
         </a>
 
         <!-- ---- Documentation ---- -->
-        <a class="example-card" href="https://diet-air-ds.vercel.app/walkthrough.html" target="_blank">
+        <a class="example-card surface-card scale-700" href="https://diet-air-ds.vercel.app/walkthrough.html" target="_blank">
           <div class="card-thumbnail">
             <iframe src="https://diet-air-ds.vercel.app/walkthrough.html"
                     loading="lazy"
@@ -314,7 +307,7 @@
         </a>
 
         <!-- TEMPLATE — duplicate this block to add more examples:
-        <a class="example-card" href="URL" target="_blank">
+        <a class="example-card surface-card scale-700" href="URL" target="_blank">
           <div class="card-thumbnail">
             <iframe src="URL" loading="lazy" title="Preview" tabindex="-1" aria-hidden="true"></iframe>
           </div>
