--- a/examples/index.html
+++ b/examples/index.html
@@ -87,6 +87,7 @@
 
     /* ---- Example card ---- */
     .example-card {
+      border-radius: var(--border-radius-200);
       overflow: hidden;
       text-decoration: none;
       display: flex;
