refactor example cards; replace border-radius with utility class for improved consistency

--- a/examples/index.html
+++ b/examples/index.html
@@ -87,7 +87,6 @@
 
     /* ---- Example card ---- */
     .example-card {
-      border-radius: var(--border-radius-200);
       overflow: hidden;
       text-decoration: none;
       display: flex;
@@ -224,7 +223,7 @@
       <div class="examples-grid">
 
         <!-- ---- Checkout ---- -->
-        <a class="example-card surface-card scale-700" href="https://diet-air-ds.vercel.app/examples/checkout.html" target="_blank">
+        <a class="example-card surface-card scale-700 rounded-200" href="https://diet-air-ds.vercel.app/examples/checkout.html" target="_blank">
           <div class="card-thumbnail">
             <iframe src="https://diet-air-ds.vercel.app/examples/checkout.html"
                     loading="lazy"
@@ -252,7 +251,7 @@
         </a>
 
         <!-- ---- Chat Agent ---- -->
-        <a class="example-card surface-card scale-700" href="https://diet-air-ds.vercel.app/examples/chat-agent.html" target="_blank">
+        <a class="example-card surface-card scale-700 rounded-200" href="https://diet-air-ds.vercel.app/examples/chat-agent.html" target="_blank">
           <div class="card-thumbnail">
             <iframe src="https://diet-air-ds.vercel.app/examples/chat-agent.html"
                     loading="lazy"
@@ -280,7 +279,7 @@
         </a>
 
         <!-- ---- Documentation ---- -->
-        <a class="example-card surface-card scale-700" href="https://diet-air-ds.vercel.app/walkthrough.html" target="_blank">
+        <a class="example-card surface-card scale-700 rounded-200" href="https://diet-air-ds.vercel.app/walkthrough.html" target="_blank">
           <div class="card-thumbnail">
             <iframe src="https://diet-air-ds.vercel.app/walkthrough.html"
                     loading="lazy"
@@ -308,7 +307,7 @@
         </a>
 
         <!-- TEMPLATE — duplicate this block to add more examples:
-        <a class="example-card surface-card scale-700" href="URL" target="_blank">
+        <a class="example-card surface-card scale-700 rounded-200" href="URL" target="_blank">
           <div class="card-thumbnail">
             <iframe src="URL" loading="lazy" title="Preview" tabindex="-1" aria-hidden="true"></iframe>
           </div>
