refactor card component; consolidate border properties and add top border-radius for improved styling

--- a/examples/index.html
+++ b/examples/index.html
@@ -102,9 +102,9 @@
       overflow: hidden;
       flex-shrink: 0;
       container-type: inline-size;
-      border-top: var(--border-weight-50) solid var(--neutral-200);
-      border-left: var(--border-weight-50) solid var(--neutral-200);
-      border-right: var(--border-weight-50) solid var(--neutral-200);
+      border: var(--border-weight-50) solid var(--neutral-200);
+      border-top-left-radius: var(--border-radius-200);
+      border-top-right-radius: var(--border-radius-200);
     }
 
     .card-thumbnail iframe {
