update card component; replace border-radius variables with fixed values for consistency

--- a/examples/index.html
+++ b/examples/index.html
@@ -103,8 +103,8 @@
       flex-shrink: 0;
       container-type: inline-size;
       border: var(--border-weight-50) solid var(--neutral-200);
-      border-top-left-radius: var(--border-radius-200);
-      border-top-right-radius: var(--border-radius-200);
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
     }
 
     .card-thumbnail iframe {
