--- a/examples/index.html
+++ b/examples/index.html
@@ -87,7 +87,6 @@
 
     /* ---- Example card ---- */
     .example-card {
-      overflow: hidden;
       text-decoration: none;
       display: flex;
       flex-direction: column;
@@ -228,7 +227,7 @@
       <div class="examples-grid">
 
         <!-- ---- Checkout ---- -->
-        <a class="example-card surface-card scale-700" href="https://diet-air-ds.vercel.app/examples/checkout.html" target="_blank">
+        <a class="example-card surface-card scale-700 rounded-200" href="https://diet-air-ds.vercel.app/examples/checkout.html" target="_blank">
           <div class="card-thumbnail">
             <iframe src="https://diet-air-ds.vercel.app/examples/checkout.html"
                     loading="lazy"
@@ -256,7 +255,7 @@
         </a>
 
         <!-- ---- Chat Agent ---- -->
-        <a class="example-card surface-card scale-700" href="https://diet-air-ds.vercel.app/examples/chat-agent.html" target="_blank">
+        <a class="example-card surface-card scale-700 rounded-200" href="https://diet-air-ds.vercel.app/examples/chat-agent.html" target="_blank">
           <div class="card-thumbnail">
             <iframe src="https://diet-air-ds.vercel.app/examples/chat-agent.html"
                     loading="lazy"
@@ -284,7 +283,7 @@
         </a>
 
         <!-- ---- Documentation ---- -->
-        <a class="example-card surface-card scale-700" href="https://diet-air-ds.vercel.app/walkthrough.html" target="_blank">
+        <a class="example-card surface-card scale-700 rounded-200" href="https://diet-air-ds.vercel.app/walkthrough.html" target="_blank">
           <div class="card-thumbnail">
             <iframe src="https://diet-air-ds.vercel.app/walkthrough.html"
                     loading="lazy"
@@ -312,7 +311,7 @@
         </a>
 
         <!-- TEMPLATE — duplicate this block to add more examples:
-        <a class="example-card surface-card scale-700" href="URL" target="_blank">
+        <a class="example-card surface-card scale-700 rounded-200" href="URL" target="_blank">
           <div class="card-thumbnail">
             <iframe src="URL" loading="lazy" title="Preview" tabindex="-1" aria-hidden="true"></iframe>
           </div>
